# MCP-project

./: README.md  pyproject.toml
src/: seminar.py  server.py
