[project]
name = "mcp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "juanxiu",email = "2316007@ewhain.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
